# BluetoothCarController

./: CMakeLists.txt  README.md  ble_connect.cpp  ble_connect.h  ble_connect.ui  characteristicinfo.h  device.cpp  device.h  deviceinfo.cpp  deviceinfo.h  joystick.cpp  joystick.h  main.cpp  maininterface.cpp  maininterface.h  res.qrc  serviceconnect.cpp  serviceconnect.h  serviceconnect.ui  serviceinfo.h  widget.ui
android_souces/: AndroidManifest.xml
